# Web-App-Demo

./: .gitignore  Makefile  README.md
.github/workflows/: pull-request.yaml  push-commit.yaml  trigger-cicd.yaml
core/libraries/iac/: .env.example  Dockerfile  Makefile  README.md  pyproject.toml
core/libraries/iac/src/: config.py
core/libraries/iac/src/cli/: __context.py  __types.py  main.py
core/libraries/iac/src/cli/__commands/cicd/: __pull_request.py  __push.py  __release.py
core/libraries/iac/src/cli/context/: __init__.py
core/libraries/iac/src/cli/groups/cicd/: __commands.py  __init__.py  __pull_request.py  __push.py  __release.py
core/libraries/iac/src/cli/types/: __init__.py
core/libraries/iac/src/config/: cli.py
core/libraries/iac/src/repository/: git.py
core/libraries/iac/src/repository/github/: __git.py  __init__.py
core/libraries/iac/src/scheduling/: workflow.py
core/libraries/iac/src/scheduling/k8s/: __init__.py  __workflow.py
core/libraries/iac/src/usecase/: __cicd_event.py  __init__.py  __pull_request.py  __push.py  __release.py
core/libraries/iac/src/usecase/cicd/: __event.py  __init__.py  __pull_request.py  __push.py  __release.py
core/libraries/iac/tests/cli/: test_context.py  test_types.py
core/libraries/iac/tests/repository/: conftest.py  test_github.py
core/terraform/: cloud.tf  main.tf  provider.tf  variables.tf
docs/: CONTRIBUTING.md  DEVELOPER.md
infrastructure/: .gitignore  .terraform.lock.hcl  Makefile  main.tf  modules.tf  providers.tf  variables.tf
services/backend/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml
services/backend/tests/: test_main.py
(+64 files in other folders)
