[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "backend"
version = "0.1.0"
description = "Web-App-Demo Backend"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    "click",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
    "httpx",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
